--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
                     <span>GitHub</span>
                 </a>
             </div>
+            <h2>Meus Projetos</h2>
+            <ul>
+                <li>
+                    <h4><a href= https://github.com/carlossutil/app-jogo-velha.git target= "blanck"> Jogo da Velha </a></h4>
+                    <p> Esse projeto apresenta um simples e básico jogo da velha. Foi bastante desafiador faze-lo pois necessita de muita organização e paciência.</p>
+                </li>
+                <li>
+                    <h4><a href= https://github.com/carlossutil/Projeto-de-Vida.git target= "blanck"> Projeto de Vida </a></h4>
+                    <p> Esse projeto apresenta um simple e básico projeto de vida. Foi bastante desafiador faze-lo pois necessita de um bom conhecimento pessoal e habilidades.</p>
+                </li>
+            </ul>
         </section>
     </main>
 
