--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </li>
                 <li>
                     <h4><a href= https://github.com/carlossutil/Projeto-de-Vida.git target= "blanck"> Projeto de Vida </a></h4>
-                    <p> Esse projeto apresenta um simple e básico projeto de vida. Foi bastante desafiador faze-lo pois necessita de um bom conhecimento pessoal e habilidades.</p>
+                    <p> Esse projeto apresenta um simples e básico projeto de vida. Foi bastante desafiador faze-lo pois necessita de um bom conhecimento pessoal e habilidades.</p>
                 </li>
             </ul>
         </section>
